--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
         <td>
-            <img src="Images/Bryan.jpeg" alt="bryan dawson profile picture" height="200" width="200">
+            <img src="Bryan.jpeg" alt="bryan dawson profile picture" height="200" width="200">
         </td>
         <td>
             <h1> Bryan Scott Dawson </h1>
